<resources>
    <!--Login screen -->
    <string name="app_name">FriendChat</string>
    <string name="action_sign_in_short">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up
    </string>
    <string name="authenticating">Authenticating...</string>
    <string name="connecting">Connecting...</string>
    <string name="login_failure">Login failure.Please recheck your email and password.</string>
    <string name="signup_failure">Sign up failure.Account already exist!</string>
    <string name="ok">OK</string>
    <string name="link_signup">No account yet? Create one</string>
    <string name="link_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password
        reset instructions.
    </string>
    <string name="facebook_app_id">1752293511679673</string>
    <string name="OAuth_client_ID">
        287536826412-5ggf0esj8avrqt1t66p7i04gb8k82hhb.apps.googleusercontent.com
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Most popular</string>
    <string name="uploading">Uploading...</string>
    <string name="gender">Gender</string>
    <string name="birth_day">Birthday</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>

    <!--chat screen -->
    <string name="chat_type_hint">Type your message...</string>
    <string name="title_activity_create_room">New room</string>

    <!--end chat screen -->
    <!--create room screen -->
    <string name="create">Create</string>
    <string name="creating_room">Creating room...</string>
    <string name="room_name">Room name</string>
    <string name="create_failure">An unexpected error has occurred.Please try again.</string>
    <!--end create room screen -->
</resources>
